--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,12 +35,12 @@ find_package(OpenCV QUIET)
 include_directories (${OpenCL_INCLUDE_DIRS} ${OpenCL_INCLUDE_DIRS}/Headers )
 include_directories (/opt/rocm/include)
 link_directories    (/opt/rocm/lib)
-list(APPEND SOURCES annmodule.cpp)
+list(APPEND SOURCES caffeModels.cpp)
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4.2 -mf16c -std=c++11")
 target_link_libraries(${PROJECT_NAME} openvx vx_nn pthread)
 
-add_executable(classifier anntest.cpp)
+add_executable(classifier classifier.cpp)
 if (OpenCV_FOUND)
   target_compile_definitions(classifier PUBLIC ENABLE_OPENCV=1)
   include_directories(${OpenCV_INCLUDE_DIRS})
